User Registration Taks to Users v7

--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -968,7 +968,7 @@
                         finishedButton.className = "finished-btn";
                         finishedButton.onclick = (e) => {
                             e.stopPropagation();
-                            finishTask(userName, task, finishedButton, selectedDate);
+                            finishTask(task, userName, selectedDate);
                         };
                         taskDiv.appendChild(finishedButton);
                     }
