--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -951,10 +951,12 @@ const userTasks = tasks.filter(task => {
 
     // Check if this is the correct day for this user based on rotation
     const selected = selectedDate || new Date().toLocaleDateString("sv-SE");
-    const startDate = toDateOnly(task.startDate || selected);
+const toDateOnly = (str) => new Date(str + "T00:00:00");
+const startDate = toDateOnly(task.startDate || selected);
 const currentDate = toDateOnly(selected);
-    const toDateOnly = (str) => new Date(str + "T00:00:00");
-    let requiredTimes = 1;
+const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
+
+let requiredTimes = 1;
 if (task.repeat === "Daily") requiredTimes = task.timesPerDay || 1;
 if (task.repeat === "Weekly") requiredTimes = task.timesPerWeek || 1;
 if (task.repeat === "Monthly") requiredTimes = task.timesPerMonth || 1;
@@ -964,6 +966,8 @@ for (let i = 0; i < requiredTimes; i++) {
     const index = (diffDays + i) % task.users.length;
     usersForToday.push(task.users[index]);
 }
+
+
 
 return usersForToday.includes(userName);
 
